chore: add new env var into example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ AWS_REGION="local"
 AWS_ACCESS_KEY="teste"
 AWS_SECRET_KEY="teste"
 AWS_ENDPOINT="http://localhost:8000"
+
+SQS_REGION="us-east-1"
+SQS_ACCESS_KEY_ID=teste
+SQS_SECRET_ACCESS_KEY=teste
+SQS_ENDPOINT=https://sqs.us-east-1.amazonaws.com/000000000000/queue-name
+SQS_VISIBILITY_TIMEOUT=30
