--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@/*": ["src/*"],
+      "@/aws/*": ["src/shared/aws/*"],
+      "@/constants/*": ["src/utils/constants/*"],
+      "@/mocks/*": ["src/utils/mocks/*"],
+      "@/entity/*": ["src/entity/*"],
+      "@/handlers/*": ["src/handler/*"]
+    }
   }
 }
