--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@vendia/serverless-express": "^4.10.4",
+    "aws-lambda": "^1.0.7",
     "dynamodb-onetable": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -53,6 +55,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "serverless-offline": "^13.2.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
